--- a/config.toml
+++ b/config.toml
@@ -31,6 +31,10 @@ url = "https://www.birs.ca"
 # Define navlinks
 # ===============
 [[extra.navlinks]]
+name = "Home"
+url = "/"
+
+[[extra.navlinks]]
 name = "About"
 url = "/#about"
 
