Add a Code of Conduct

--- a/config.toml
+++ b/config.toml
@@ -43,6 +43,10 @@ name = "Workshop"
 url = "/workshop"
 
 [[extra.navlinks]]
+name = "Code of Conduct"
+url = "/coc"
+
+[[extra.navlinks]]
 name = "Contact"
 url = "/#contact"
 
