Add pages for Description, Code of Conduct and Schedule (#2)
Add buttons to these new pages in home's About section. Increase gap between nav items.

--- a/config.toml
+++ b/config.toml
@@ -39,6 +39,18 @@ name = "About"
 url = "/#about"
 
 [[extra.navlinks]]
+name = "Workshop"
+url = "/workshop"
+
+[[extra.navlinks]]
+name = "Schedule"
+url = "/schedule"
+
+[[extra.navlinks]]
+name = "Code of Conduct"
+url = "/coc"
+
+[[extra.navlinks]]
 name = "Contact"
 url = "/#contact"
 
