Fix mistake in base_url

--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@
 # base_url = "https://birs-2023.softwareunderground.org"
 
 # define a temporary base_url (until the website gets its own subdomain)
-base_url = "https://github.softwareunderground.io/birs-2023/"
+base_url = "https://softwareunderground.github.io/birs-2023/"
 
 title = "BIRS 2023 Workshop"
 
