Add Information for Participants page

--- a/config.toml
+++ b/config.toml
@@ -50,6 +50,10 @@ name = "Schedule"
 path = "/schedule"
 
 [[extra.navlinks]]
+name = "Info for Participants"
+path = "/information"
+
+[[extra.navlinks]]
 name = "Code of Conduct"
 path = "/coc"
 
