--- a/config.toml
+++ b/config.toml
@@ -1,8 +1,5 @@
 # The URL the site will be built for
-# base_url = "https://birs-2023.softwareunderground.org"
-
-# define a temporary base_url (until the website gets its own subdomain)
-base_url = "https://softwareunderground.github.io/birs-2023/"
+base_url = "https://birs-2023.softwareunderground.org"
 
 title = "BIRS 2023 Workshop"
 
