--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,4 +13,5 @@ jobs:
       - name: Build website
         uses: shalzz/zola-deploy-action@e37232516a63e8711048bda4e1afb9e0891f46fa
         env:
+          CHECK_LINKS: true
           BUILD_ONLY: true
