--- a/config.toml
+++ b/config.toml
@@ -14,6 +14,12 @@ build_search_index = false
 # Theme can be customised by setting the `highlight_theme` variable to a theme supported by Zola
 highlight_code = true
 
+[link_checker]
+# Skip anchor checking for external URLs that start with these prefixes
+skip_anchor_prefixes = [
+    "https://www.openstreetmap.org/",
+]
+
 [extra]
 
 [extra.fatiando]
